# ProfilingOpenUSD

./: .gitignore  .gitmodules  LICENSE.md  README.md
Cpp/: CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
Python/: RuntimeResultsViz.ipynb  WriteUSDStageProfiling.py
Python/Assets/: SimpleTransform.usda  SimpleTransform.usdc
Python/RuntimeResults/: 360000_bytes__for_10000_objects_in_10_usda_files.csv  360000_bytes__for_10000_objects_in_10_usdc_files.csv  360000_bytes__for_10000_objects_in_1_usda_files.csv  360000_bytes__for_10000_objects_in_1_usdc_files.csv  360000_bytes__for_10000_objects_in_2_usda_files.csv  360000_bytes__for_10000_objects_in_2_usdc_files.csv  360000_bytes__for_10000_objects_in_5_usda_files.csv  360000_bytes__for_10000_objects_in_5_usdc_files.csv  36000_bytes__for_1000_objects_in_10_usda_files.csv  36000_bytes__for_1000_objects_in_10_usdc_files.csv  36000_bytes__for_1000_objects_in_1_usda_files.csv  36000_bytes__for_1000_objects_in_1_usdc_files.csv  36000_bytes__for_1000_objects_in_2_usda_files.csv  36000_bytes__for_1000_objects_in_2_usdc_files.csv  36000_bytes__for_1000_objects_in_5_usda_files.csv  36000_bytes__for_1000_objects_in_5_usdc_files.csv  3600_bytes__for_100_objects_in_10_usda_files.csv  3600_bytes__for_100_objects_in_10_usdc_files.csv  3600_bytes__for_100_objects_in_1_usda_files.csv  3600_bytes__for_100_objects_in_1_usdc_files.csv  3600_bytes__for_100_objects_in_2_usda_files.csv  3600_bytes__for_100_objects_in_2_usdc_files.csv  3600_bytes__for_100_objects_in_5_usda_files.csv  3600_bytes__for_100_objects_in_5_usdc_files.csv  360_bytes__for_10_objects_in_10_usda_files.csv  360_bytes__for_10_objects_in_10_usdc_files.csv  360_bytes__for_10_objects_in_1_usda_files.csv  360_bytes__for_10_objects_in_1_usdc_files.csv  360_bytes__for_10_objects_in_2_usda_files.csv  360_bytes__for_10_objects_in_2_usdc_files.csv  360_bytes__for_10_objects_in_5_usda_files.csv  360_bytes__for_10_objects_in_5_usdc_files.csv
Python/RuntimeResults_1-Threads/: 36000_bytes_for_1000_objects_in_10_usda_files.csv  36000_bytes_for_1000_objects_in_10_usdc_files.csv  36000_bytes_for_1000_objects_in_1_usda_files.csv  36000_bytes_for_1000_objects_in_1_usdc_files.csv  36000_bytes_for_1000_objects_in_2_usda_files.csv  36000_bytes_for_1000_objects_in_2_usdc_files.csv  36000_bytes_for_1000_objects_in_5_usda_files.csv  36000_bytes_for_1000_objects_in_5_usdc_files.csv  3600_bytes_for_100_objects_in_10_usda_files.csv  3600_bytes_for_100_objects_in_10_usdc_files.csv  3600_bytes_for_100_objects_in_1_usda_files.csv  3600_bytes_for_100_objects_in_1_usdc_files.csv  3600_bytes_for_100_objects_in_2_usda_files.csv  3600_bytes_for_100_objects_in_2_usdc_files.csv  3600_bytes_for_100_objects_in_5_usda_files.csv  3600_bytes_for_100_objects_in_5_usdc_files.csv  360_bytes_for_10_objects_in_10_usda_files.csv  360_bytes_for_10_objects_in_10_usdc_files.csv  360_bytes_for_10_objects_in_1_usda_files.csv  360_bytes_for_10_objects_in_1_usdc_files.csv  360_bytes_for_10_objects_in_2_usda_files.csv  360_bytes_for_10_objects_in_2_usdc_files.csv  360_bytes_for_10_objects_in_5_usda_files.csv  360_bytes_for_10_objects_in_5_usdc_files.csv
Python/RuntimeResults_2-Threads/: 36000_bytes_for_1000_objects_in_10_usda_files.csv  36000_bytes_for_1000_objects_in_10_usdc_files.csv  36000_bytes_for_1000_objects_in_1_usda_files.csv  36000_bytes_for_1000_objects_in_1_usdc_files.csv  36000_bytes_for_1000_objects_in_2_usda_files.csv  36000_bytes_for_1000_objects_in_2_usdc_files.csv  36000_bytes_for_1000_objects_in_5_usda_files.csv  36000_bytes_for_1000_objects_in_5_usdc_files.csv  3600_bytes_for_100_objects_in_10_usda_files.csv  3600_bytes_for_100_objects_in_10_usdc_files.csv  3600_bytes_for_100_objects_in_1_usda_files.csv  3600_bytes_for_100_objects_in_1_usdc_files.csv  3600_bytes_for_100_objects_in_2_usda_files.csv  3600_bytes_for_100_objects_in_2_usdc_files.csv  3600_bytes_for_100_objects_in_5_usda_files.csv  (+9 more)
(+24 files in other folders)
